spacing on tabs fixed

--- a/app/css/pyra.css
+++ b/app/css/pyra.css
@@ -1009,7 +1009,7 @@ textarea::-webkit-input-placeholder {
 .secondary-tabs {
 	border-bottom: 1px solid #e7e7e6; 
 	width: 100%;
-	margin-bottom: 15px;
+	margin-bottom: 30px;
 }
 
 .secondary-tabs .nav-tabs li a {
